# code-timer

./: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: layout.tsx  page.tsx
src/components/: Icons.tsx  MiniTimer.tsx  ProgressRing.tsx  SettingsModal.tsx  StatsPanel.tsx  ThemeToggle.tsx  Timer.tsx  TimerDisplay.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useStats.ts  useTimer.ts
src/types/: index.ts
src/utils/: desktop.ts
