[package]
name = "code-timer"
version = "0.1.0"
description = "A Pomodoro timer for developers"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "window-set-min-size", "window-unmaximize", "window-set-resizable", "window-set-focus", "window-hide", "window-maximize", "window-request-user-attention", "window-print", "window-create", "window-set-always-on-top", "window-center", "window-show", "window-set-position", "window-close", "window-set-decorations", "window-set-max-size", "window-minimize", "window-set-icon", "window-set-title", "window-set-size", "window-set-fullscreen", "window-unminimize", "window-set-skip-taskbar", "window-start-dragging", "notification-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
